# FeatherGate

./: CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  README_ZH.md  SECURITY.md
benches/: routing_bench.rs
docs/: API.md  ARCHITECTURE.md  CONFIGURATION.md  DEPLOYMENT.md  DEVELOPMENT.md  INSPECTION_REPORT.md
examples/: feathergate.yaml  minimal-config.yaml  production-config.yaml
examples/javascript/: README.md  javascript_client.js
examples/python/: README.md  client.py
examples/shell/: README.md  curl_examples.sh
src/: error.rs  lib.rs  main.rs
src/config/: mod.rs
src/metrics/: mod.rs
src/providers/: anthropic.rs  gemini.rs  mod.rs  openai.rs  routing.rs
src/server/: handlers.rs  mod.rs  streaming.rs
src/types/: mod.rs
tests/: streaming_integration_test.rs
